# Multilayer_anisotropic_Transfer_Matrix

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/multilayer_atm/: __init__.py  app.py  custom_materials.py  engine.py  materials.py  models.py  plotting.py  presets.py  solver.py  solver_fast.py
src/multilayer_atm/ui/: __init__.py  calculation_views.py  layer_builder.py  material_builder.py  theme_layout.py
tests/: test_engine_vs_pygtm.py  test_fast_solver.py  test_hbn_patch.py  test_isofrequency_rotation.py  test_plot_color_limits.py
